Correcting directory structure

--- a/TODO
+++ b/TODO
@@ -1,1 +1,2 @@
 ✔ Initiate the project in github @started(22-01-11 12:44) @done(22-01-11 14:30) @lasted(1h46m57s)
+☐ Create a boilerplate client application that can be started and tested, using the logging and config file @started(22-01-11 14:33)
